--- a/taqueria-plugin-contract-types/package.json
+++ b/taqueria-plugin-contract-types/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-contract-types",
-	"version": "0.52.1",
+	"version": "0.52.2",
 	"main": "index.cjs",
 	"module": "index.js",
 	"source": "index.ts",
@@ -34,10 +34,10 @@
 		"typescript": "^5.3.3"
 	},
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.52.1",
-		"@taquito/michel-codec": "^19.2.0",
-		"@taquito/signer": "^19.2.0",
-		"@taquito/taquito": "^19.2.0",
+		"@taqueria/node-sdk": "^0.52.2",
+		"@taquito/michel-codec": "^20.0.0-beta.0",
+		"@taquito/signer": "^20.0.0-beta.0",
+		"@taquito/taquito": "^20.0.0-beta.0",
 		"bignumber.js": "^9.1.2",
 		"fast-glob": "^3.3.2"
 	},
