--- a/taqueria-plugin-jest/package.json
+++ b/taqueria-plugin-jest/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-jest",
-	"version": "0.52.1",
+	"version": "0.52.2",
 	"main": "index.cjs",
 	"module": "index.js",
 	"source": "index.ts",
@@ -27,11 +27,11 @@
 		"directory": "taqueria-plugin-jest"
 	},
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.52.1",
-		"@taqueria/plugin-contract-types": "^0.52.1",
-		"@taquito/signer": "^19.2.0",
-		"@taquito/taquito": "^19.2.0",
-		"@taquito/utils": "^19.2.0",
+		"@taqueria/node-sdk": "^0.52.2",
+		"@taqueria/plugin-contract-types": "^0.52.2",
+		"@taquito/signer": "^20.0.0-beta.0",
+		"@taquito/taquito": "^20.0.0-beta.0",
+		"@taquito/utils": "^20.0.0-beta.0",
 		"@types/jest": "^29.5.11",
 		"async-retry": "^1.3.3",
 		"bignumber.js": "^9.1.2",
