--- a/taqueria-plugin-taquito/package.json
+++ b/taqueria-plugin-taquito/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-taquito",
-	"version": "0.52.1",
+	"version": "0.52.2",
 	"description": "A taqueria plugin for originating smart contracts using Taquito",
 	"targets": {
 		"default": {
@@ -42,10 +42,10 @@
 	},
 	"homepage": "https://github.com/pinnacle-labs/taqueria#readme",
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.52.1",
-		"@taquito/michel-codec": "^19.2.0",
-		"@taquito/signer": "^19.2.0",
-		"@taquito/taquito": "^19.2.0",
+		"@taqueria/node-sdk": "^0.52.2",
+		"@taquito/michel-codec": "^20.0.0-beta.0",
+		"@taquito/signer": "^20.0.0-beta.0",
+		"@taquito/taquito": "^20.0.0-beta.0",
 		"fast-glob": "^3.3.2",
 		"wtfnode": "^0.9.1"
 	},
