--- a/taqueria-plugin-core/package.json
+++ b/taqueria-plugin-core/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-core",
-	"version": "0.56.0",
+	"version": "0.56.1",
 	"description": "A taqueria plugin for core tasks",
 	"targets": {
 		"default": {
@@ -27,23 +27,23 @@
 	"engines": {
 		"node": ">=16"
 	},
-	"author": "Pinnacle Labs",
+	"author": "Taqueria",
 	"license": "Apache-2.0",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/pinnacle-labs/taqueria.git",
+		"url": "https://github.com/tezostaqueria/taqueria.git",
 		"directory": "taqueria-plugin-core"
 	},
 	"bugs": {
-		"url": "https://github.com/pinnacle-labs/taqueria/issues"
+		"url": "https://github.com/tezostaqueria/taqueria/issues"
 	},
-	"homepage": "https://github.com/pinnacle-labs/taqueria#readme",
+	"homepage": "https://github.com/tezostaqueria/taqueria#readme",
 	"devDependencies": {
 		"tsup": "^8.0.1",
 		"typescript": "^5.3.3"
 	},
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.56.0"
+		"@taqueria/node-sdk": "^0.56.1"
 	},
 	"tsup": {
 		"entry": [
