--- a/taqueria-plugin-octez-client/package.json
+++ b/taqueria-plugin-octez-client/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-octez-client",
-	"version": "0.56.0",
+	"version": "0.56.1",
 	"description": "A taqueria plugin for utilizing octez-client",
 	"targets": {
 		"default": {
@@ -29,19 +29,19 @@
 	"engines": {
 		"node": ">=16"
 	},
-	"author": "Pinnacle Labs",
+	"author": "Taqueria",
 	"license": "Apache-2.0",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/pinnacle-labs/taqueria.git",
+		"url": "https://github.com/tezostaqueria/taqueria.git",
 		"directory": "taqueria-plugin-tezos-client"
 	},
 	"bugs": {
-		"url": "https://github.com/pinnacle-labs/taqueria/issues"
+		"url": "https://github.com/tezostaqueria/taqueria/issues"
 	},
-	"homepage": "https://github.com/pinnacle-labs/taqueria#readme",
+	"homepage": "https://github.com/tezostaqueria/taqueria#readme",
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.56.0",
+		"@taqueria/node-sdk": "^0.56.1",
 		"fast-glob": "^3.3.2"
 	},
 	"devDependencies": {
