--- a/taqueria-plugin-helloworld/package.json
+++ b/taqueria-plugin-helloworld/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-helloworld",
-	"version": "0.56.0",
+	"version": "0.56.1",
 	"description": "An example of a plugin for Taqueria",
 	"main": "index.js",
 	"scripts": {
@@ -12,14 +12,14 @@
 		"helloworld",
 		"tezos"
 	],
-	"author": "Pinnacle Labs <support@pinnaclelabs.limited>",
+	"author": "Taqueria",
 	"license": "Apache-2.0",
 	"devDependencies": {
 		"tsup": "^8.0.1",
 		"typescript": "^5.3.3"
 	},
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.56.0"
+		"@taqueria/node-sdk": "^0.56.1"
 	},
 	"tsup": {
 		"entry": [
