--- a/taqueria-plugin-ipfs-pinata/package.json
+++ b/taqueria-plugin-ipfs-pinata/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-ipfs-pinata",
-	"version": "0.56.0",
+	"version": "0.56.1",
 	"description": "A plugin for Taqueria providing ipfs publishing and pinning using the Pinata service",
 	"keywords": [
 		"taqueria",
@@ -24,17 +24,17 @@
 	"scripts": {
 		"build": "npx tsc -noEmit -p ./tsconfig.json && npx tsup"
 	},
-	"author": "Pinnacle Labs",
+	"author": "Taqueria",
 	"license": "Apache-2.0",
 	"type": "module",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/pinnacle-labs/taqueria.git",
+		"url": "https://github.com/tezostaqueria/taqueria.git",
 		"directory": "taqueria-plugin-ipfs-pinata"
 	},
 	"dependencies": {
 		"@helia/unixfs": "^3.0.0",
-		"@taqueria/node-sdk": "^0.56.0",
+		"@taqueria/node-sdk": "^0.56.1",
 		"dotenv": "^16.4.1",
 		"form-data": "^4.0.0",
 		"helia": "^4.0.0",
