--- a/taqueria-plugin-ligo-legacy/package.json
+++ b/taqueria-plugin-ligo-legacy/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-ligo-legacy",
-	"version": "0.56.0",
+	"version": "0.56.1",
 	"description": "A taqueria plugin for compiling LIGO smart contracts that target LIGO v0.73.0 and earlier.",
 	"targets": {
 		"default": {
@@ -29,20 +29,20 @@
 		"smart contract",
 		"compile"
 	],
-	"author": "Pinnacle Labs",
+	"author": "Taqueria",
 	"license": "Apache-2.0",
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/pinnacle-labs/taqueria.git",
+		"url": "git+https://github.com/tezostaqueria/taqueria.git",
 		"directory": "taqueria-plugin-ligo"
 	},
 	"bugs": {
-		"url": "https://github.com/pinnacle-labs/taqueria/issues"
+		"url": "https://github.com/tezostaqueria/taqueria/issues"
 	},
-	"homepage": "https://github.com/pinnacle-labs/taqueria#readme",
+	"homepage": "https://github.com/tezostaqueria/taqueria#readme",
 	"dependencies": {
-		"@taqueria/lib-ligo": "^0.56.0",
-		"@taqueria/node-sdk": "^0.56.0",
+		"@taqueria/lib-ligo": "^0.56.1",
+		"@taqueria/node-sdk": "^0.56.1",
 		"fast-glob": "^3.3.2"
 	},
 	"devDependencies": {
