--- a/taqueria-plugin-mock/package.json
+++ b/taqueria-plugin-mock/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-mock",
-	"version": "0.56.0",
+	"version": "0.56.1",
 	"description": "A plugin used to test Taqueria",
 	"private": true,
 	"scripts": {
@@ -16,13 +16,13 @@
 		"smart contract",
 		"compile"
 	],
-	"author": "Pinnacle Labs",
+	"author": "Taqueria",
 	"license": "Apache-2.0",
 	"bugs": {
-		"url": "https://github.com/pinnacle-labs/taqueria/issues"
+		"url": "https://github.com/tezostaqueria/taqueria/issues"
 	},
-	"homepage": "https://github.com/pinnacle-labs/taqueria#readme",
+	"homepage": "https://github.com/tezostaqueria/taqueria#readme",
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.56.0"
+		"@taqueria/node-sdk": "^0.56.1"
 	}
 }
