--- a/taqueria-plugin-tezbox/package.json
+++ b/taqueria-plugin-tezbox/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-tezbox",
-	"version": "0.56.0",
+	"version": "0.56.1",
 	"description": "A plugin for Taqueria providing local sandbox capabilities built on TezBox",
 	"private": true,
 	"keywords": [
@@ -27,16 +27,16 @@
 		"build": "npx tsc -noEmit -p ./tsconfig.json && npx tsup",
 		"pluginInfo": "npx ts-node index.ts --taqRun pluginInfo --i18n {\"foo:\"\"bar\"}"
 	},
-	"author": "Pinnacle Labs",
+	"author": "Taqueria",
 	"license": "Apache-2.0",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/pinnacle-labs/taqueria.git",
+		"url": "https://github.com/tezostaqueria/taqueria.git",
 		"directory": "taqueria-plugin-tezbox"
 	},
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.56.0",
-		"@taqueria/protocol": "^0.56.0",
+		"@taqueria/node-sdk": "^0.56.1",
+		"@taqueria/protocol": "^0.56.1",
 		"async-retry": "^1.3.3",
 		"bignumber.js": "^9.1.2",
 		"fast-glob": "^3.3.2",
