--- a/taqueria-plugin-taquito/package.json
+++ b/taqueria-plugin-taquito/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-taquito",
-	"version": "0.56.15",
+	"version": "0.56.17",
 	"description": "A taqueria plugin for originating smart contracts using Taquito",
 	"targets": {
 		"default": {
@@ -41,17 +41,23 @@
 		"url": "https://github.com/tezostaqueria/taqueria/issues"
 	},
 	"homepage": "https://github.com/tezostaqueria/taqueria#readme",
+	"resolutions": {
+		"node-fetch": "3.3.2"
+	},
+	"overrides": {
+		"node-fetch": "3.3.2"
+	},
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.56.15",
-		"@taquito/michel-codec": "^20.0.1",
-		"@taquito/signer": "^20.0.1",
-		"@taquito/taquito": "^20.0.1",
+		"@taqueria/node-sdk": "^0.56.17",
+		"@taquito/michel-codec": "^21.0.0-beta.0",
+		"@taquito/signer": "^21.0.0-beta.0",
+		"@taquito/taquito": "^21.0.0-beta.0",
 		"fast-glob": "^3.3.2",
-		"wtfnode": "^0.9.1"
+		"wtfnode": "^0.9.3"
 	},
 	"devDependencies": {
-		"tsup": "^8.0.1",
-		"typescript": "^5.3.3"
+		"tsup": "^8.3.0",
+		"typescript": "^5.6.2"
 	},
 	"tsup": {
 		"entry": [
