--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/root",
-	"version": "0.56.15",
+	"version": "0.56.17",
 	"description": "An easy to use opinionated tool for building, testing, and deploying Tezos software",
 	"main": "index.ts",
 	"directories": {
@@ -18,10 +18,11 @@
 		"deploy-website": "cd website && npm run deploy",
 		"watch": "npx chokidar \"*.ts\" \"taqueria-utils/**/*.ts\" \"taqueria-protocol/**/*.ts\" -c \"npm run build\" --initial",
 		"build-and-watch-vscode": "npx chokidar \"*.ts\" \"taqueria-vscode-extension/**/*.ts\" \"taqueria-protocol/**/*.ts\" -c \"npm run compile -w taqueria-vscode-extension\" --initial",
-		"prepare": "husky install",
+		"prepare": "npx husky",
 		"format": "npx dprint fmt",
 		"format:check": "npx dprint check",
-		"update-lock": "deno cache --lock-write index.ts"
+		"update-lock": "deno cache --lock-write index.ts",
+		"postinstall": "patch-package"
 	},
 	"repository": {
 		"type": "git",
@@ -49,9 +50,9 @@
 		"chokidar-cli": "^3.0.0",
 		"dprint": "^0.45.0",
 		"husky": "^9.0.11",
-		"lerna": "^8.1.2",
+		"lerna": "^8.1.8",
 		"lint-staged": "^15.2.2",
-		"npm-check-updates": "^16.14.15",
+		"patch-package": "^8.0.0",
 		"ts-node": "^10.9.2",
 		"tsup": "^8.0.2",
 		"typescript": "^5.3.3"
@@ -77,39 +78,5 @@
 		"./taqueria-lib*",
 		"./taqueria-plugin*",
 		"./tests"
-	],
-	"dependencies": {
-		"@helia/unixfs": "^3.0.1",
-		"@taqueria/lib-ligo": "^0.56.15",
-		"@taqueria/node-sdk": "^0.56.15",
-		"@taqueria/plugin-contract-types": "^0.56.15",
-		"@taqueria/protocol": "^0.56.15",
-		"@taquito/michel-codec": "^19.2.0",
-		"@taquito/signer": "^19.2.0",
-		"@taquito/taquito": "^19.2.0",
-		"@taquito/utils": "^19.2.0",
-		"@types/async-retry": "^1.4.8",
-		"@types/jest": "^29.5.12",
-		"@types/node": "^20.11.24",
-		"@types/node-fetch": "^2.6.11",
-		"@types/prompts": "^2.4.9",
-		"async-retry": "^1.3.3",
-		"bignumber.js": "^9.1.2",
-		"dotenv": "^16.4.5",
-		"execa": "^8.0.1",
-		"fast-glob": "^3.3.2",
-		"form-data": "^4.0.0",
-		"helia": "^4.0.2",
-		"jest-config": "^29.7.0",
-		"node-fetch": "^3.3.2",
-		"node-machine-id-xz": "^1.0.2",
-		"portfinder": "^1.0.32",
-		"prompts": "^2.4.2",
-		"rambda": "^9.1.0",
-		"rimraf": "^5.0.5",
-		"ts-jest": "^29.1.2",
-		"ts-pattern": "^5.0.8",
-		"tsconfig-paths": "^4.2.0",
-		"wtfnode": "^0.9.1"
-	}
+	]
 }
