--- a/taqueria-plugin-jest/package.json
+++ b/taqueria-plugin-jest/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-jest",
-	"version": "0.56.15",
+	"version": "0.56.17",
 	"main": "index.cjs",
 	"module": "index.js",
 	"source": "index.ts",
@@ -26,23 +26,29 @@
 		"url": "https://github.com/tezostaqueria/taqueria.git",
 		"directory": "taqueria-plugin-jest"
 	},
+	"resolutions": {
+		"node-fetch": "3.3.2"
+	},
+	"overrides": {
+		"node-fetch": "3.3.2"
+	},
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.56.15",
-		"@taqueria/plugin-contract-types": "^0.56.15",
-		"@taquito/signer": "^20.0.1",
-		"@taquito/taquito": "^20.0.1",
-		"@taquito/utils": "^20.0.1",
+		"@taqueria/node-sdk": "^0.56.17",
+		"@taqueria/plugin-contract-types": "^0.56.17",
+		"@taquito/signer": "^21.0.0-beta.0",
+		"@taquito/taquito": "^21.0.0-beta.0",
+		"@taquito/utils": "^21.0.0-beta.0",
 		"@types/jest": "^29.5.11",
 		"async-retry": "^1.3.3",
 		"bignumber.js": "^9.1.2",
-		"execa": "^8.0.1",
 		"fast-glob": "^3.3.2",
 		"jest-config": "^29.7.0"
 	},
 	"devDependencies": {
 		"@types/async-retry": "^1.4.8",
-		"tsup": "^8.0.1",
-		"typescript": "^5.3.3"
+		"@types/node": "^22.7.4",
+		"tsup": "^8.3.0",
+		"typescript": "^5.6.2"
 	},
 	"tsup": {
 		"entry": [
