--- a/taqueria-sdk/package.json
+++ b/taqueria-sdk/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/node-sdk",
-	"version": "0.56.15",
+	"version": "0.56.17",
 	"description": "A TypeScript SDK for NodeJS used for Taqueria plugin development.",
 	"main": "./index.js",
 	"source": "./index.ts",
@@ -33,20 +33,26 @@
 		"url": "https://github.com/tezostaqueria/taqueria/issues"
 	},
 	"homepage": "https://github.com/tezostaqueria/taqueria#readme",
+	"resolutions": {
+		"node-fetch": "3.3.2"
+	},
+	"overrides": {
+		"node-fetch": "3.3.2"
+	},
 	"dependencies": {
-		"@taqueria/protocol": "^0.56.15",
-		"@taquito/signer": "^20.0.1",
-		"@taquito/taquito": "^20.0.1",
-		"@taquito/utils": "^20.0.1",
-		"i18next": "^23.7.8",
+		"@taqueria/protocol": "^0.56.17",
+		"@taquito/signer": "^21.0.0-beta.0",
+		"@taquito/taquito": "^21.0.0-beta.0",
+		"@taquito/utils": "^21.0.0-beta.0",
+		"i18next": "^23.15.1",
 		"node-fetch": "^3.3.2",
-		"rambda": "^9.1.0",
+		"rambda": "^9.3.0",
 		"shell-quote": "^1.8.1",
 		"stacktrace-js": "^2.0.2",
-		"ts-pattern": "^5.0.6",
+		"ts-pattern": "^5.4.0",
 		"why-is-node-running": "^2.2.2",
 		"yargs": "^17.7.2",
-		"zod": "^3.22.4"
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@bevry/jsonfile": "^1.3.0",
@@ -54,8 +60,8 @@
 		"@types/project-name-generator": "^2.1.3",
 		"@types/shell-quote": "^1.7.5",
 		"@types/yargs": "^17.0.32",
-		"tsup": "^8.0.1",
-		"typescript": "^5.3.3"
+		"tsup": "^8.3.0",
+		"typescript": "^5.6.2"
 	},
 	"tsup": {
 		"entry": [
