--- a/taqueria-vscode-extension/package.json
+++ b/taqueria-vscode-extension/package.json
@@ -3,7 +3,7 @@
 	"displayName": "Taqueria",
 	"description": "A better way to build on Tezos",
 	"publisher": "Taqueria",
-	"version": "0.56.15",
+	"version": "0.56.17",
 	"private": true,
 	"engines": {
 		"vscode": "^1.84.2"
@@ -708,7 +708,7 @@
 		"test": "./bin/run-tests.sh"
 	},
 	"devDependencies": {
-		"@taquito/taquito": "^20.0.1",
+		"@taquito/taquito": "^21.0.0-beta.0",
 		"@types/fs-extra": "^11.0.4",
 		"@types/glob": "^8.1.0",
 		"@types/mocha": "^10.0.6",
@@ -717,17 +717,16 @@
 		"@types/semver": "^7.5.6",
 		"@types/vscode": "^1.84.2",
 		"@vscode/test-electron": "^2.3.9",
-		"@vscode/vsce": "^2.22.0",
+		"@vscode/vsce": "^3.1.1",
 		"esbuild": "^0.20.0",
 		"fs-extra": "^11.2.0",
-		"glob": "^10.3.10",
-		"mocha": "^10.2.0",
-		"typescript": "^5.3.3"
+		"glob": "^11.0.0",
+		"typescript": "^5.6.2"
 	},
 	"dependencies": {
 		"@microsoft/signalr": "^8.0.0",
-		"@taqueria/analytics": "^0.56.15",
-		"@taqueria/protocol": "^0.56.15",
+		"@taqueria/analytics": "^0.56.17",
+		"@taqueria/protocol": "^0.56.17",
 		"cli-table3": "^0.6.3",
 		"comment-json": "^4.2.3",
 		"eventsource": "^2.0.2",
